* Added checks on data used to restrict posts to avoid invalid group IDs.
* Revised the posts_where filter that restricts post access for resilience against invalid postmeta values.
* Fixed several instances of deprecated notices related to passing null where non-null values are required (PHP 8.x compatibility).
* Fixed the style of the Capabilities select container on the Groups admin screen.

= 2.17.0 =
* WordPress 6.1 compatible.
* Fixes potential errors with inconsistent postmeta values obtained for groups protecting posts, using own API method which has been further guarded against inconsistent values.
* Revised code to use updated API method to obtain read access group IDs instead of accessing via get_post_meta().
* Fixed several instances of code formatting issues.
* Improves the performance on filtering out adjacent posts with sets of eligible post IDs cached by post type and avoids redundant queries.

= 2.16.2 =
* Fixes a PHP 8.1 warning related to the passing of a null parameter to version_compare().

= 2.16.1 =
* Fixes a parse error caused by a trailing `,`.

= 2.16.0 =
* WordPress 6.0 compatible.
* Fixed slashes appearing in term-related group names in the Groups column of the administrative screens for posts.
* Updated Groups menu position to straight integer for WordPress 6.x compatibility.
* Fixed use of undefined variable in legacy code.
* Add-Ons section updated.
* Revised Groups' menu icon.

= 2.15.0 =
* WordPress 5.9 compatible.
* Revised block titles and removed redundant "Block" part.
* Updated the German translation.
* Added German formal and informal translations for Germany, Austria and Switzerland.
* Updated the Spanish translation.
* Updated the French translation.
* Updated the Indonesian translation.
* Updated partial translations.
* Added clarification on applicable post type access restrictions.
* Revised notice on supporting Groups.