@@ -1,0 +1,26 @@
+/**
+ * groups_admin_post.css
+ *
+ * Copyright (c) "kento" Karim Rahimpur www.itthinx.com
+ *
+ * This code is released under the GNU General Public License.
+ * See COPYRIGHT.txt and LICENSE.txt.
+ *
+ * This code is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * This header and all notices must be kept intact.
+ *
+ * @author Karim Rahimpur
+ * @package groups
+ * @since groups 2.18.0
+ */
+
+.groups-groups-container .selectize-input input[type="select-multiple"] {
+	font-size: inherit;
+	vertical-align: middle;
+	height: 28px;
+	line-height: 28px;
+}
